[package]
name = "certainly"
version = "1.6.2"
authors = ["Félix Saparelli <felix@passcod.name>"]
description = "The easiest way to create self-signed certificates. Ever."
license = "Artistic-2.0"
edition = "2018"

homepage = "https://github.com/passcod/certainly"
repository = "https://github.com/passcod/certainly"
keywords = ["ssl", "certificate", "self-signed", "openssl"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[badges]
appveyor = { repository = "passcod/certainly" }
travis-ci = { repository = "passcod/certainly" }

[profile.release]
lto = true

[features]
default = ["rsa", "inspect"]
rsa = ["openssl", "openssl-probe"]
inspect = ["rsa", "url"]

[dependencies]
clap = "2.33.0"
chrono = "0.4.9"
gethostname = "0.2.0"
lazy_static = "1.4.0"
openssl = { version = "0.10.24", features = ["vendored"], optional = true }
openssl-probe = { version = "0.1.2", optional = true }
url = { version = "2.1.0", optional = true }
ring = "0.16.9"
rcgen = { version = "0.6.0", features = ["pem", "x509-parser"] }
