# Uncomment to work on RSA (nightly only), to make the RSA keygen fast in debug
# cargo-features = ["profile-overrides"]
# [profile.dev.overrides.num-bigint-dig]
# opt-level = 3

[package]
name = "certainly"
version = "1.7.0"
authors = ["Félix Saparelli <felix@passcod.name>"]
description = "The easiest way to create self-signed certificates. Ever."
license = "Artistic-2.0"
edition = "2018"

homepage = "https://github.com/passcod/certainly"
repository = "https://github.com/passcod/certainly"
keywords = ["ssl", "tls", "certificate", "self-signed"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[badges]
appveyor = { repository = "passcod/certainly" }
travis-ci = { repository = "passcod/certainly" }

[profile.release]
lto = true

[dependencies]
bit-vec = "0.6.1"
chrono = "0.4.9"
clap = "2.33.0"
gethostname = "0.2.0"
lazy_static = "1.4.0"
nom = "5.0.1"
num-bigint = "0.2.3"
num-bigint-dig = "0.4.0"
rand = "0.6.5"
rcgen = { version = "0.7.0", features = ["pem", "x509-parser"] }
ring = { version = "0.16.9" }
rsa = "0.1.3"
rustls-connector = { version = "0.8.0", features = ["dangerous_configuration"] }
time = "0.1.42"
url = "2.1.0"
x509-parser = "0.6.0"
yasna = { version = "0.3.1", features = ["bit-vec", "num-bigint"] }
